[SQLLINE-54] Add JDK 9 support; drop JDK 1.5 support
Upgrade jmockit (necessary for JDK 9); also update jline, junit,
hsqldb, maven-dependency-plugin, maven-gpg-plugin, but not h2 (1.4.192
and later does not support JDK 1.6).

Update copyright year.