@@ -21,12 +21,12 @@
     <!-- The following list is sorted. -->
     <docbkx-maven-plugin.version>2.0.17</docbkx-maven-plugin.version>
     <h2.version>1.4.191</h2.version>
-    <hsqldb.version>2.3.1</hsqldb.version>
-    <jline.version>2.10</jline.version>
-    <jmockit.version>1.18</jmockit.version>
-    <junit.version>4.11</junit.version>
-    <maven-dependency-plugin.version>2.5.1</maven-dependency-plugin.version>
-    <maven-gpg-plugin.version>1.5</maven-gpg-plugin.version>
+    <hsqldb.version>2.3.4</hsqldb.version>
+    <jline.version>2.14.3</jline.version>
+    <jmockit.version>1.30</jmockit.version>
+    <junit.version>4.12</junit.version>
+    <maven-dependency-plugin.version>2.10</maven-dependency-plugin.version>
+    <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
     <scott-data-hsqldb.version>0.1</scott-data-hsqldb.version>
   </properties>
 
@@ -176,15 +176,15 @@
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>1.5</source>
-          <target>1.5</target>
+          <source>1.6</source>
+          <target>1.6</target>
         </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <argLine>-Xmx1024m -XX:MaxPermSize=256m -javaagent:${org.jmockit:jmockit:jar}</argLine>
+          <argLine>-Xmx1024m -javaagent:${org.jmockit:jmockit:jar}</argLine>
         </configuration>
       </plugin>
       <plugin>
